fixup button horizontal spacing (#10513)

--- a/frontend/src/metabase/css/components/buttons.css
+++ b/frontend/src/metabase/css/components/buttons.css
@@ -36,7 +36,7 @@
 }
 
 .Button--medium {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.75rem;
   font-size: 0.8rem;
 }
 
